server-simple-video-stream.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/rbo/AI-for-edge-microshift-demo
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"cam\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: cam
    app.kubernetes.io/component: cam
    app.kubernetes.io/instance: cam
    app.kubernetes.io/name: cam
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: cam
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cam
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cam
        deployment: cam
    spec:
      serviceAccountName: privileged
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/dummy/dummy:latest
          imagePullPolicy: Always
          name: cam
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/video0
            name: dev-video0
          securityContext:
            privileged: true

      volumes:
      - name: dev-video0
        hostPath:
          path: /dev/video0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/rbo/AI-for-edge-microshift-demo
  labels:
    app: cam
    app.kubernetes.io/component: cam
    app.kubernetes.io/instance: cam
    app.kubernetes.io/name: cam
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: cam
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: cam
    deployment: cam
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: cam
    app.kubernetes.io/component: cam
    app.kubernetes.io/instance: cam
    app.kubernetes.io/name: cam
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: cam
spec:
  port:
    targetPort: 5000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cam
    weight: 100
  wildcardPolicy: None
